--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@uirouter/angularjs": "^1.0.25",
-        "angular": "^1.7.9"
+        "angular": "^1.7.9",
+        "oclazyload": "^1.1.0"
     }
 }
