--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     },
     "dependencies": {
         "@uirouter/angularjs": "^1.0.25",
-        "angular": "^1.7.9",
-        "oclazyload": "^1.1.0"
+        "angular": "^1.7.9"
     }
 }
